-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
-
Environment:
jdk: Java(TM) SE Runtime Environment 1.8.0 b89 (1.8.0-ea-fastdebug-b89)
vm: Java HotSpot(TM) Server VM 25.0 b33 (25.0-b33-internal-201305171601.amurillo.hs25-b33-snapshot-fastdebug)
-
b38
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8017758 | 8 | David Chase | P2 | Closed | Fixed | b96 |
;; Using jvm: "/export/local/aurora/sandbox/sca/vmsqe/jdk/pit/2013-05-17-160126.amurillo.hs25-b33-snapshot/fastdebug/linux-i586/jre/lib/i386/server/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/160126.amurillo/s/src/share/vm/opto/node.cpp:71), pid=26937, tid=2972064624
# assert(Compile::current()->live_nodes() < (uint)MaxNodeLimit) failed: Live Node limit exceeded limit
#
# JRE version: Java(TM) SE Runtime Environment (8.0-b89) (build 1.8.0-ea-fastdebug-b89)
# Java VM: Java HotSpot(TM) Server VM (25.0-b33-internal-201305171601.amurillo.hs25-b33-snapshot-fastdebug mixed mode linux-x86 )
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x096b1c00): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=26956, stack(0xb11e1000,0xb1262000)]
Stack: [0xb11e1000,0xb1262000], sp=0xb125f3c0, free space=504k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc32b1e] VMError::report_and_die()+0x1ae;; VMError::report_and_die()+0x1ae
V [libjvm.so+0x5790a8] report_vm_error(char const*, int, char const*, char const*)+0x68;; report_vm_error(char const*, int, char const*, char const*)+0x68
V [libjvm.so+0x9f435c] Node::verify_construction()+0x17c;; Node::verify_construction()+0x17c
V [libjvm.so+0x9fb28b] Node::clone() const+0x21b;; Node::clone() const+0x21b
V [libjvm.so+0x96d1d4] Matcher::xform(Node*, int)+0x584;; Matcher::xform(Node*, int)+0x584
V [libjvm.so+0x96e6d7] Matcher::match()+0xc07;; Matcher::match()+0xc07
V [libjvm.so+0x507e00] Compile::Code_Gen()+0x140;; Compile::Code_Gen()+0x140
V [libjvm.so+0x50c908] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x1608;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x1608
V [libjvm.so+0x4078a3] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x2e3;; C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x2e3
V [libjvm.so+0x515c6b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa6b;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa6b
V [libjvm.so+0x516c65] CompileBroker::compiler_thread_loop()+0x805;; CompileBroker::compiler_thread_loop()+0x805
V [libjvm.so+0xbbb21f] compiler_thread_entry(JavaThread*, Thread*)+0x4f;; compiler_thread_entry(JavaThread*, Thread*)+0x4f
V [libjvm.so+0xbcaec9] JavaThread::thread_main_inner()+0x1b9;; JavaThread::thread_main_inner()+0x1b9
V [libjvm.so+0xbcb1be] JavaThread::run()+0x24e;; JavaThread::run()+0x24e
V [libjvm.so+0xa2c9d9] java_start(Thread*)+0x119;; java_start(Thread*)+0x119
C [libpthread.so.0+0x5e72] start_thread+0xd2
- backported by
-
JDK-8017758 assert(Compile::current()->live_nodes() < (uint)MaxNodeLimit) failed: Live Node limit exceeded limit
-
- Closed
-
- relates to
-
JDK-6934604 enable parts of EliminateAutoBox by default
-
- Resolved
-
-
JDK-8011858 Use Compile::live_nodes() instead of Compile::unique() in appropriate places
-
- Resolved
-
-
JDK-8015837 Nashorn crashes with tiered on x86 when running v8 benchmark
-
- Closed
-
-
JDK-8143321 Reduce the C2 compiler's memory usage
-
- Closed
-