8014959: assert(Compile::current()->live_nodes() < (uint)MaxNodeLimit) failed: Live Node limit exceeded limit

Insert extra checks and bailouts for too many nodes

Reviewed-by: kvn